# templateMetaProgramming

./: CMakeLists.txt  README.md  compile.sh
inc/: mathFunc.h
tests/: factTest.cpp
